# cursos-python

PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/: Ejercicios.ipynb
PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/nueva_solucion/: pyproject.toml
PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/nueva_solucion/nueva_solucion/: main.py
PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/nueva_solucion/tests/: test_nueva_solucion.py
PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/solution/: README.md  pyproject.toml
PracticasDeDesarrollo/2_Desarrollo_II/ejercicios/solution/mistery/: main.py
