[tool.poetry]
name = "nueva_solucion"
version = "0.1.0"
description = ""
authors = ["Agustin Dye <agusni.12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
