[tool.poetry]
name = "mistery"
version = "0.1.0"
description = ""
authors = ["Agustin Dye <agustin@deployr.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
functionX = "mistery.main:functionX"
functionY = "mistery.main:functionY"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
